---- Changes since 1.290 ----
Added a Module Config option to display secondary groups as a text box, which makes more sense on systems with a large number of groups.
---- Changes since 1.300 ----
Cleaned up user and group creation links on main page, add links to jump to user and group lists, and duplicated buttons for operating on many users and groups at once.
Use the nscd -i command to refresh its cache after adding a user or group.
---- Changes since 1.310 ----
In a user batch file, # is only treated as a comment at the start of a line.
---- Changes since 1.380 ----
The real base directory for homes is now respected when batch creating users.
Improved MD5 encryption auto-detection with newer PAM config files.
Batch user creation data is now better validated, and the batch form has been re-written to use the new Webmin UI library.
When renaming a user whose group is the same as his username, the group will be renamed too by default.
---- Changes since 1.390 ----
Added a Module Config option to send the username and password to a program for checking as input, rather than on the command line.
Users and groups with spaces in their names can specified on the access control page by quoting them.
---- Changes since 1.410 ----
Added support for the new user and group databases found in OSX 10.5 and later, which use Apple's directory services instead of NetInfo.
---- Changes since 1.420 ----
The option to force a password change at the next login is available for new users, if a default 'Maximum days' is set on the Module Config page or if running Linux.
---- Changes since 1.430 ----
Added tabs to the module's page page, to switching between user and group lists easier.
Cleaned up the user interface to be more consistent with the rest of Webmin.
Improved support for default password changing options on AIX.
---- Changes since 1.440 ----
Added a non-editable list of users who have this group as their primary to the Edit Group page.