@@ -40,3 +40,4 @@ shells=fixed,passwd,shells
 secmode=0
 last_show=0
 passwd_progmode=0
+membox=0
