@@ -40,3 +40,4 @@ last_show=0
 nscd_restart=/etc/rc.d/nscd restart
 config-aix
 passwd_progmode=0
+membox=0
