@@ -1,6 +1,11 @@
 <header>Secondary groups</header>
+
 A list of zero or more other groups to which this user belongs. If this
 user attempts to access a file and the group of that file is one of the
-secondary groups, then the group permissions for that file will apply.
-<hr>
+secondary groups, then the group permissions for that file will apply. <p>
+
+If using a text box to enter groups, each group name must be on a
+separate line. <p>
+
+<footer>
 
