@@ -6,6 +6,9 @@ that owns the file, then the group permissions for that file will apply. <p>
 
 This list does not include users who have this group as their
 <a href=group>primary group</a>, only users who have this as one of
-their <a href=2nd>secondary groups</a>. 
-<hr>
+their <a href=2nd>secondary groups</a>. <p>
+
+If using a text box to enter group members, each username must be on a separate line. <p>
+
+<footer>
 
