@@ -181,6 +181,7 @@ gedit_details=Group Details
 gedit_group=Group name
 gedit_gid=Group ID
 gedit_members=Members
+gedit_oneperline=(One per line)
 gedit_homedirs=Home directories
 gedit_allfiles=All files
 gedit_ecreate=You cannot create new groups
